[gd_scene load_steps=7 format=3 uid="uid://btx85dlbcpw1w"]

[ext_resource type="Script" uid="uid://d2k1papweed8x" path="res://Scripts/blue_tower.gd" id="1_0ac3u"]
[ext_resource type="Texture2D" uid="uid://sk6hf8soub7a" path="res://Sprite/New Tower/Turrets_g4.png" id="2_w5yro"]
[ext_resource type="Texture2D" uid="uid://8xkyhek7athr" path="res://Sprite/New Tower/Turrets_g5.png" id="3_2apoe"]

[sub_resource type="SpriteFrames" id="SpriteFrames_58b7d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w5yro")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w5yro")
}, {
"duration": 1.0,
"texture": ExtResource("3_2apoe")
}],
"loop": true,
"name": &"shoot",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptvpv"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_df2s1"]
radius = 349.023

[node name="BlueTower" type="StaticBody2D"]
z_index = 5
rotation = 1.5708
collision_layer = 5
script = ExtResource("1_0ac3u")
fire_interval = 0.1
detector_path = NodePath("Tower")
muzzle_path = NodePath("Muzzle")
upgrade_cost = 400

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.011832, 0.0214193)
rotation = 1.57079
scale = Vector2(0.127155, 0.084711)
sprite_frames = SubResource("SpriteFrames_58b7d")
animation = &"shoot"
autoplay = "idle"
frame_progress = 0.630038

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ptvpv")

[node name="Area" type="Marker2D" parent="."]
position = Vector2(8, -9.53674e-07)

[node name="Tower" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower"]
shape = SubResource("CircleShape2D_df2s1")

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(17, -6.15398e-05)

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
